fix: applied suggestion - removed useless files - fixed storybook routes

--- a/packages/design-docs/.storybook/manager-head.html
+++ b/packages/design-docs/.storybook/manager-head.html
@@ -1,7 +1,9 @@
 <style>
     
+    /* This css rule target the element in the sidebar with the icon representing individual stories to hide them */
     .sidebar-item:has(div.css-99l9qv > svg.css-ndobih) {
       display: none;
     }
+
     
 </style>
