--- a/preview/storybook-preview/iframe.html
+++ b/preview/storybook-preview/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BslZVi9Q.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DUXrMsW8.js"></script>
   </head>
 
   <body>
