--- a/preview/test-apps-integration/react/iframe.html
+++ b/preview/test-apps-integration/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-17f7a00l.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CIeSQwYL.js"></script>
   </head>
 
   <body>
