deploy: 3c9d19db3e9a33abd57ea804cf2616d037a25d91

--- a/preview/storybook-preview-composition/index.html
+++ b/preview/storybook-preview-composition/index.html
@@ -136,13 +136,13 @@
           window['REFS'] = {
   "angular": {
     "title": "Angular",
-    "url": "https://opensource.rte-france.com/design-system-rte/angular",
+    "url": "https://rte-france.github.io/design-system-rte/preview/storybook-preview-composition/angular",
     "id": "angular",
     "type": "server-checked"
   },
   "react": {
     "title": "React",
-    "url": "https://opensource.rte-france.com/design-system-rte/react",
+    "url": "https://rte-france.github.io/design-system-rte/preview/storybook-preview-composition/react",
     "id": "react",
     "type": "server-checked"
   }
