--- a/preview/test-apps-integration/iframe.html
+++ b/preview/test-apps-integration/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DFJYxxYN.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BjL1tdWq.js"></script>
   </head>
 
   <body>
