deploy: bd36c1d91a0650f0910b00a04709dd6f3ee72384

--- a/preview/image-display-stories/react/iframe.html
+++ b/preview/image-display-stories/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CDajj95G.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DV1WRSBl.js"></script>
   </head>
 
   <body>
