deploy: 56a59c5afc20d8afc701f7b735fec55f0cb6075c

--- a/preview/image-display-stories/react/iframe.html
+++ b/preview/image-display-stories/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DV1WRSBl.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-tD4WD98U.js"></script>
   </head>
 
   <body>
