deploy: f9b97cde03dae17853fd1a45cca54e5464d65222

--- a/preview/image-display-stories/react/iframe.html
+++ b/preview/image-display-stories/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-tD4WD98U.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-D65Z_8Hg.js"></script>
   </head>
 
   <body>
