--- a/preview/image-display-stories/iframe.html
+++ b/preview/image-display-stories/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DJ5BoTYX.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CgTMwv8w.js"></script>
   </head>
 
   <body>
