deploy: fe4065cfdb25c8b03e9166787a79356692928faf

--- a/preview/image-display-stories/react/iframe.html
+++ b/preview/image-display-stories/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-D65Z_8Hg.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-D5drq82X.js"></script>
   </head>
 
   <body>
