--- a/preview/image-display-stories/react/iframe.html
+++ b/preview/image-display-stories/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-D5drq82X.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-D8miLBf6.js"></script>
   </head>
 
   <body>
