deploy: 5cc13fa91126db850780f84bf4bc269c40f601c0

--- a/preview/add-text-area/react/iframe.html
+++ b/preview/add-text-area/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BHbm3SUh.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-jIc7slcb.js"></script>
   </head>
 
   <body>
