--- a/react/iframe.html
+++ b/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Bt1i9SFo.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-D-HR7Z6v.js"></script>
   </head>
 
   <body>
