--- a/preview/storybook-wip-tags/react/iframe.html
+++ b/preview/storybook-wip-tags/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-a1iR4hnn.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-C-wFDshj.js"></script>
   </head>
 
   <body>
