--- a/preview/add-text-area/react/iframe.html
+++ b/preview/add-text-area/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-PXrzmEv2.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CfAkJksE.js"></script>
   </head>
 
   <body>
