deploy: a723d0b873c896ad5371e5ab4674aa0e14d56626

--- a/preview/split-button-product-review/react/iframe.html
+++ b/preview/split-button-product-review/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-C-wFDshj.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DKDQTM0b.js"></script>
   </head>
 
   <body>
