deploy: ddde467a5c95e781be412203ecfd76511de70fd0

--- a/preview/tag-component/react/iframe.html
+++ b/preview/tag-component/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DMYRfrvG.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CA02BPaa.js"></script>
   </head>
 
   <body>
