deploy: 3a6dac66ed0689eeeed7dbd5213f502248bd3000

--- a/preview/tag-component/react/iframe.html
+++ b/preview/tag-component/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CA02BPaa.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-_psZuMO6.js"></script>
   </head>
 
   <body>
