--- a/preview/add-gradient/react/iframe.html
+++ b/preview/add-gradient/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-C-wFDshj.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DKDQTM0b.js"></script>
   </head>
 
   <body>
