--- a/preview/radio-button-stories-behavior/react/iframe.html
+++ b/preview/radio-button-stories-behavior/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DD_xVxSf.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Bt08Smws.js"></script>
   </head>
 
   <body>
