deploy: f2b367f65d95b72c3f4fe7a8bd7f0df738305259

--- a/preview/add-text-area/react/iframe.html
+++ b/preview/add-text-area/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-AT-Pkdwv.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BU2JGD0i.js"></script>
   </head>
 
   <body>
