--- a/preview/text-input-react/react/iframe.html
+++ b/preview/text-input-react/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CtTf6H5p.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DHXoFkCP.js"></script>
   </head>
 
   <body>
