--- a/preview/add-text-area/react/iframe.html
+++ b/preview/add-text-area/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BU2JGD0i.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-lRTh8j7g.js"></script>
   </head>
 
   <body>
