--- a/preview/add-cancel-icon/react/iframe.html
+++ b/preview/add-cancel-icon/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Y6E1UI-3.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Dq9VbG4A.js"></script>
   </head>
 
   <body>
