deploy: 7abde4a08b9a2656f5ba80aca3ed1d0c84ce7488

--- a/react/iframe.html
+++ b/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Bt08Smws.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-B3isn_vd.js"></script>
   </head>
 
   <body>
