deploy: 7dade1e0cebcd981beff3eb6b123b6a3cd634ef6

--- a/preview/add-cancel-icon/react/iframe.html
+++ b/preview/add-cancel-icon/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Dq9VbG4A.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CzjLxYLg.js"></script>
   </head>
 
   <body>
