deploy: bb87fa482274a8d1966ba1039d00b7f9ee424788

--- a/preview/text-input-react/react/iframe.html
+++ b/preview/text-input-react/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DHXoFkCP.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-D2Ew8hZy.js"></script>
   </head>
 
   <body>
