--- a/preview/icon-button-toggle/react/iframe.html
+++ b/preview/icon-button-toggle/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BOkjHki7.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-B0mno00r.js"></script>
   </head>
 
   <body>
