deploy: 5cb047324aa9a8604f71e6ad600063347b1a0cb5

--- a/preview/text-input-react/react/iframe.html
+++ b/preview/text-input-react/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-C87eMKS2.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-B6zCgtEn.js"></script>
   </head>
 
   <body>
