--- a/preview/text-input-react/react/iframe.html
+++ b/preview/text-input-react/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-B6zCgtEn.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CKKVV_3A.js"></script>
   </head>
 
   <body>
