deploy: 969ea48806b3f65b6e990b9957b404939c28dcfc

--- a/preview/text-input-react/react/iframe.html
+++ b/preview/text-input-react/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DOQfocHQ.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-D2gWpzha.js"></script>
   </head>
 
   <body>
