--- a/preview/text-input/react/iframe.html
+++ b/preview/text-input/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-D2gWpzha.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DgFRC_XI.js"></script>
   </head>
 
   <body>
