deploy: 7a05d068e7d0a488a052aee14da4509eb152b0e3

--- a/preview/add-chip/react/iframe.html
+++ b/preview/add-chip/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Dp-c73WW.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BJPFXkMe.js"></script>
   </head>
 
   <body>
