--- a/preview/badge-component/react/iframe.html
+++ b/preview/badge-component/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Dj_UrPbt.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DPyevP5m.js"></script>
   </head>
 
   <body>
