deploy: 439a0b20806261dfd54f3f6348401a4565680ac0

--- a/preview/text-input/react/iframe.html
+++ b/preview/text-input/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BdceZSaN.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-s_2b77Op.js"></script>
   </head>
 
   <body>
