deploy: ba727f19369ea36fa9d72f239d24815d38299d41

--- a/preview/add-chip/react/iframe.html
+++ b/preview/add-chip/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BJPFXkMe.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-61RFOAAO.js"></script>
   </head>
 
   <body>
