--- a/preview/add-chip/react/iframe.html
+++ b/preview/add-chip/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-61RFOAAO.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Cp6oFKJ-.js"></script>
   </head>
 
   <body>
