deploy: 194cdb8d82ccaf00e2dda59d78da6f4606c608a3

--- a/preview/add-chip/react/iframe.html
+++ b/preview/add-chip/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Cp6oFKJ-.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BYz-N3R-.js"></script>
   </head>
 
   <body>
