--- a/preview/text-input/react/iframe.html
+++ b/preview/text-input/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-s_2b77Op.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BUxbtFv5.js"></script>
   </head>
 
   <body>
