deploy: 6c7bc49c9a155c6cb923fafbcd106533a2a7646f

--- a/preview/text-input/react/iframe.html
+++ b/preview/text-input/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BUxbtFv5.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Bto7niO1.js"></script>
   </head>
 
   <body>
