deploy: 7d28ebe2872e9187b098d504242bac7c658d11c3

--- a/preview/add-chip/react/iframe.html
+++ b/preview/add-chip/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BYz-N3R-.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-D7w0WO_z.js"></script>
   </head>
 
   <body>
