deploy: fba846fc3eb20fac976a3d737d2d22a939060a23

--- a/preview/add-chip/react/iframe.html
+++ b/preview/add-chip/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DBEM180N.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-C4R5aK_G.js"></script>
   </head>
 
   <body>
