deploy: 0f388888a3f4c7d2a6d5c489691d7594dc797ddc

--- a/preview/badge-component/react/iframe.html
+++ b/preview/badge-component/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DPyevP5m.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BcZNkjDR.js"></script>
   </head>
 
   <body>
