deploy: 68640a0e3f453c9ea67d73d97e2af1e3cfed04c4

--- a/preview/add-chip/react/iframe.html
+++ b/preview/add-chip/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CHuaP7bL.js"></script>
+    <script type="module" crossorigin src="./assets/iframe--L80gbx-.js"></script>
   </head>
 
   <body>
