deploy: f4cb3d77a6de1317b0a0fb437ea2d22537733d2f

--- a/preview/badge-component/react/iframe.html
+++ b/preview/badge-component/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-ClGC4v5Z.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-B6smxNkB.js"></script>
   </head>
 
   <body>
