--- a/preview/badge-component/react/iframe.html
+++ b/preview/badge-component/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-B6smxNkB.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DSP1KTK6.js"></script>
   </head>
 
   <body>
