deploy: 050084b2eecf99bb2c8a9fb7f74e2acdeb24ae45

--- a/preview/add-chip/react/iframe.html
+++ b/preview/add-chip/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe--L80gbx-.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DNfDohYD.js"></script>
   </head>
 
   <body>
