deploy: 93002436f8ec58f7a13aa9b191b0b9285ffa6f63

--- a/preview/badge-component/react/iframe.html
+++ b/preview/badge-component/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DSP1KTK6.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BswWw8S7.js"></script>
   </head>
 
   <body>
