deploy: 22eda78e4e5e02d8c8b450b0ce9bc3b8f83abf2c

--- a/preview/add-text-area/react/iframe.html
+++ b/preview/add-text-area/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CMUu9yR5.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CnjeM76m.js"></script>
   </head>
 
   <body>
