--- a/preview/tag-component/react/iframe.html
+++ b/preview/tag-component/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BdvL8s_d.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DlHuRVa7.js"></script>
   </head>
 
   <body>
