deploy: 212467f4e60f04db2f9799c7fb85890eb44ab414

--- a/preview/add-text-area/react/iframe.html
+++ b/preview/add-text-area/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CnjeM76m.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-b5ZWyJmZ.js"></script>
   </head>
 
   <body>
