deploy: 83739f6c71a4bab285b8c5ab460a0faef7e234e3

--- a/preview/add-text-area/react/iframe.html
+++ b/preview/add-text-area/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-b5ZWyJmZ.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-IpGsQL-l.js"></script>
   </head>
 
   <body>
