--- a/preview/divider/react/iframe.html
+++ b/preview/divider/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-434RnJHi.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-7bPRpzSa.js"></script>
   </head>
 
   <body>
