deploy: 96e909a4ac1f3c8fd90335be4db0d3efacb401c9

--- a/preview/add-segmented-control/react/iframe.html
+++ b/preview/add-segmented-control/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BrV5wnbj.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Caqi3sat.js"></script>
   </head>
 
   <body>
