deploy: 3b09ca0baeebc3ae09b597f4de3779488bc01420

--- a/preview/add-segmented-control/react/iframe.html
+++ b/preview/add-segmented-control/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Caqi3sat.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DgTFa3IE.js"></script>
   </head>
 
   <body>
