deploy: 4d4bb6e742f2edf71cb22cf3b778ef63a6bafc00

--- a/preview/add-segmented-control/react/iframe.html
+++ b/preview/add-segmented-control/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DgTFa3IE.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DMz6RkAm.js"></script>
   </head>
 
   <body>
