--- a/preview/switch/react/iframe.html
+++ b/preview/switch/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BoPCvgf8.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-arSH6p_g.js"></script>
   </head>
 
   <body>
