--- a/preview/component-switch/react/iframe.html
+++ b/preview/component-switch/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-C_tXKJnY.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-A6Gub_ub.js"></script>
   </head>
 
   <body>
