deploy: 8b89ad648920328d81179150547f9900103a8cf4

--- a/preview/add-segmented-control/react/iframe.html
+++ b/preview/add-segmented-control/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CxkmaBa1.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Cbp0ctXU.js"></script>
   </head>
 
   <body>
