deploy: db36d34f615c682c9480276925b338348c7ab27f

--- a/preview/add-segmented-control/react/iframe.html
+++ b/preview/add-segmented-control/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BiFZzQ60.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-kQmk5AHJ.js"></script>
   </head>
 
   <body>
