deploy: 60de37c5208c3cd89e68385ef48f924cd11b323f

--- a/preview/add-segmented-control/react/iframe.html
+++ b/preview/add-segmented-control/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-kQmk5AHJ.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-ByJXCV98.js"></script>
   </head>
 
   <body>
