deploy: e82e148b6dcb1dd99d4d87d66368c9846b830a9f

--- a/preview/component-switch/react/iframe.html
+++ b/preview/component-switch/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-A6Gub_ub.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BTA6qm8J.js"></script>
   </head>
 
   <body>
