--- a/preview/add-segmented-control/react/iframe.html
+++ b/preview/add-segmented-control/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-ByJXCV98.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-V_M-Rxkc.js"></script>
   </head>
 
   <body>
