deploy: 7b670ed7f18013b5cfe1da3749fb3f2b26ef430d

--- a/preview/add-segmented-control/react/iframe.html
+++ b/preview/add-segmented-control/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-V_M-Rxkc.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-40jTom68.js"></script>
   </head>
 
   <body>
