deploy: 122c04fbc8f99d9875686740e4325052435e81ad

--- a/preview/storybook-badge/react/iframe.html
+++ b/preview/storybook-badge/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-ChR6odfc.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DQHz_Dcq.js"></script>
   </head>
 
   <body>
