deploy: b68f8d755d8c15e4bacb0546cdc41736efe6ba48

--- a/preview/storybook-badge/react/iframe.html
+++ b/preview/storybook-badge/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DQHz_Dcq.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CR79IEQH.js"></script>
   </head>
 
   <body>
