--- a/preview/component-switch/react/iframe.html
+++ b/preview/component-switch/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BTA6qm8J.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CVj2lrci.js"></script>
   </head>
 
   <body>
