deploy: 9c729cbf9206cbda94165510f915e68e1281ee74

--- a/react/iframe.html
+++ b/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Dz3fljqk.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-HZn9-Ni-.js"></script>
   </head>
 
   <body>
