--- a/preview/add-overlay/react/iframe.html
+++ b/preview/add-overlay/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-B5xvhaM5.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DZ35GhdZ.js"></script>
   </head>
 
   <body>
