--- a/preview/storybook-badge/react/iframe.html
+++ b/preview/storybook-badge/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CR79IEQH.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Dgo6SpEN.js"></script>
   </head>
 
   <body>
