--- a/react/iframe.html
+++ b/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-C7hqx6fR.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Dgo6SpEN.js"></script>
   </head>
 
   <body>
