deploy: 90cbee0da5e77a69af6e587c708eb3407c1c9554

--- a/preview/docs-badge-appearance/react/iframe.html
+++ b/preview/docs-badge-appearance/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CFY0xie3.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CCAaBRjA.js"></script>
   </head>
 
   <body>
