deploy: 4f095618c9a54f36cdbe58f3620b226f3c9806aa

--- a/preview/add-overlay/react/iframe.html
+++ b/preview/add-overlay/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Cztz-uy-.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CI3UV6er.js"></script>
   </head>
 
   <body>
