--- a/preview/add-overlay/react/iframe.html
+++ b/preview/add-overlay/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CI3UV6er.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-xfsmL1Jx.js"></script>
   </head>
 
   <body>
