deploy: 28921edfb462e451970f402e8973aa93815d69af

--- a/preview/add-overlay/react/iframe.html
+++ b/preview/add-overlay/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-xfsmL1Jx.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Cq4-q846.js"></script>
   </head>
 
   <body>
