--- a/preview/breadcrumbs/react/iframe.html
+++ b/preview/breadcrumbs/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Culukpbq.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BZS2dlhi.js"></script>
   </head>
 
   <body>
