--- a/test-apps/angular/src/index.html
+++ b/test-apps/angular/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root data-theme="bleu_iceberg" data-mode="light"></app-root>
+<body data-theme="bleu_iceberg" data-mode="light">
+  <app-root/>
 </body>
 </html>
