--- a/preview/add-dropdown/react/iframe.html
+++ b/preview/add-dropdown/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-C-4E9bVf.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CuxTyA1K.js"></script>
   </head>
 
   <body>
