deploy: f608f794255144911e4c9be301550d9fd8e38556

--- a/preview/dark-mode-font-color/react/iframe.html
+++ b/preview/dark-mode-font-color/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CjBEDUxi.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-pTlmIiSP.js"></script>
   </head>
 
   <body>
