--- a/preview/add-dropdown/react/iframe.html
+++ b/preview/add-dropdown/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CfG7zF4M.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-C0rP5hQd.js"></script>
   </head>
 
   <body>
