--- a/preview/add-dropdown/react/iframe.html
+++ b/preview/add-dropdown/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CtzBfZ3n.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-B5ueqI9U.js"></script>
   </head>
 
   <body>
