--- a/preview/loader/react/iframe.html
+++ b/preview/loader/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Cav7eOv3.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CfRHtRmH.js"></script>
   </head>
 
   <body>
