deploy: 45b0b1add87cdb518b68f7b4d5da4059c160e76a

--- a/react/iframe.html
+++ b/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-pTlmIiSP.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-auzREwCO.js"></script>
   </head>
 
   <body>
