--- a/preview/add-dropdown/react/iframe.html
+++ b/preview/add-dropdown/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-7G3Duhn9.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-D3y95mlk.js"></script>
   </head>
 
   <body>
