--- a/preview/add-dropdown/react/iframe.html
+++ b/preview/add-dropdown/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-t4UerL1Q.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-ASBhrx1-.js"></script>
   </head>
 
   <body>
