--- a/preview/storybook-pages-divider/react/iframe.html
+++ b/preview/storybook-pages-divider/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-iulwFk9k.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-C9pEWLel.js"></script>
   </head>
 
   <body>
