--- a/preview/storybook-pages-switch/react/iframe.html
+++ b/preview/storybook-pages-switch/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-UeG2KNwB.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BHy-RvZM.js"></script>
   </head>
 
   <body>
