deploy: e6659891072f5bcc958cd6d29602cc6a4004645d

--- a/preview/storybook-pages-segmented-control/react/iframe.html
+++ b/preview/storybook-pages-segmented-control/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-B5odysKI.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-5zH56DKO.js"></script>
   </head>
 
   <body>
