--- a/preview/storybook-pages-segmented-control/react/iframe.html
+++ b/preview/storybook-pages-segmented-control/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Bbnz9iVr.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-dfWhhk0j.js"></script>
   </head>
 
   <body>
