deploy: b300039fee87e3405a396598c1a4a37da8c205df

--- a/preview/storybook-pages-segmented-control/react/iframe.html
+++ b/preview/storybook-pages-segmented-control/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-dfWhhk0j.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-0cAeJ3Km.js"></script>
   </head>
 
   <body>
