--- a/preview/breadcrumb-with-dropdown/react/iframe.html
+++ b/preview/breadcrumb-with-dropdown/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CIoAN0ll.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-C9QbtP4h.js"></script>
   </head>
 
   <body>
