--- a/preview/popover/react/iframe.html
+++ b/preview/popover/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CiLaGUXI.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Cg7JimCE.js"></script>
   </head>
 
   <body>
