--- a/preview/png-to-svg/react/iframe.html
+++ b/preview/png-to-svg/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DHVZLcPu.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-B7vbaaFw.js"></script>
   </head>
 
   <body>
