deploy: db270cd4633797f2b88af83f85931895654b8a12

--- a/react/iframe.html
+++ b/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-B7vbaaFw.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CndAwwdF.js"></script>
   </head>
 
   <body>
