--- a/preview/banner/react/iframe.html
+++ b/preview/banner/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-zp48JMpC.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Cy3pAm2Q.js"></script>
   </head>
 
   <body>
