--- a/preview/tab/react/iframe.html
+++ b/preview/tab/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DVf9igfb.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-B_QYirDW.js"></script>
   </head>
 
   <body>
