deploy: 19be1409164a569e8884d0327afd1078c035d021

--- a/preview/tab/react/iframe.html
+++ b/preview/tab/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CHkvSP6t.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CnPHyQiL.js"></script>
   </head>
 
   <body>
