--- a/preview/tab/react/iframe.html
+++ b/preview/tab/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CnPHyQiL.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-TgNLI-Pc.js"></script>
   </head>
 
   <body>
