--- a/preview/popover/react/iframe.html
+++ b/preview/popover/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BxTbvi6u.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-8-trTEpV.js"></script>
   </head>
 
   <body>
