--- a/preview/badge-update/react/iframe.html
+++ b/preview/badge-update/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-B9Sla3Hg.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Cfq-P32R.js"></script>
   </head>
 
   <body>
