deploy: 49e393ac00696dd1c7c708978cf3cee9e276ceab

--- a/preview/tab/react/iframe.html
+++ b/preview/tab/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-B2QtMzwT.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BNvdEsDT.js"></script>
   </head>
 
   <body>
