--- a/preview/angular-dropdown-directive/react/iframe.html
+++ b/preview/angular-dropdown-directive/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Bhtnf2UI.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-j8_Toz7S.js"></script>
   </head>
 
   <body>
