--- a/react/iframe.html
+++ b/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Cfq-P32R.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-yO4KwJJy.js"></script>
   </head>
 
   <body>
