deploy: 803a06fa7281fe11e146283fca48043059b801cd

--- a/preview/dsr-408/react/iframe.html
+++ b/preview/dsr-408/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BZtJ0T2j.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DcfPZ9Ju.js"></script>
   </head>
 
   <body>
