deploy: 35ec000ece084be8b971996c86b32ba17b3ac274

--- a/preview/dsr-408/react/iframe.html
+++ b/preview/dsr-408/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DcfPZ9Ju.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BX4GPgrI.js"></script>
   </head>
 
   <body>
