--- a/preview/ci-angular-quality/react/iframe.html
+++ b/preview/ci-angular-quality/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-SSFqVMxA.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BhYG8Cp_.js"></script>
   </head>
 
   <body>
