deploy: 8109087a22d86de792edc1844e068ab795b4b27a

--- a/react/iframe.html
+++ b/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BhYG8Cp_.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Cj7-DkHQ.js"></script>
   </head>
 
   <body>
