fix (angular18): correct storybook builder & angular's test-app

--- a/test-apps/angular/src/index.html
+++ b/test-apps/angular/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body data-theme="bleu_iceberg" data-mode="light">
-  <app-root/>
+  <app-root></app-root>
 </body>
 </html>
