deploy: 8f235765fa545c59fd78dec43e7dc19a2bb721a6

--- a/preview/dsr-408/react/iframe.html
+++ b/preview/dsr-408/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BY9OQeTk.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-7CNmjdDm.js"></script>
   </head>
 
   <body>
