deploy: dabd8cd6c1ed81e3951d67950b406903e0fda095

--- a/preview/dsr-305/react/iframe.html
+++ b/preview/dsr-305/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BaKuslz3.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-EnQFMSKM.js"></script>
   </head>
 
   <body>
