deploy: daf0f33ec70df94b48db7917b8a38b94fd68d525

--- a/react/iframe.html
+++ b/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-C-wYKSjk.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CCBOD6TZ.js"></script>
   </head>
 
   <body>
