deploy: abe051c8cb3710b61f06a4defaf4b2c1b88f84ec

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CLBz2MdK.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CNxCSyC5.js"></script>
   </head>
 
   <body>
