deploy: 5f0cd7eae24ac9b78a08cb52c8ac428919454280

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BUFsxAOj.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DJDDpaRh.js"></script>
   </head>
 
   <body>
