deploy: 174c730c759b03092c2f05f6c892727af9ba16a7

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DJDDpaRh.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BDYu0Dg5.js"></script>
   </head>
 
   <body>
