deploy: 5e1105d567e997d4ade5551f6c4f2076eaa53cd5

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BDYu0Dg5.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BL7l3CFh.js"></script>
   </head>
 
   <body>
