deploy: 528ff1bbef2d8d3e5284a9ee2c63e11002f984b8

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DiPwRYqt.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DopGvv2n.js"></script>
   </head>
 
   <body>
