deploy: 06e4117130ea73b0f3384dc0aa2f0c9fb2c0c36b

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DRoFWVLy.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BEo3GDNA.js"></script>
   </head>
 
   <body>
