deploy: 25fe5de48938eecc8e6cdcfa430d7c6629070768

--- a/preview/dsr-184/react/iframe.html
+++ b/preview/dsr-184/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-C2EdIvpW.js"></script>
+    <script type="module" crossorigin src="./assets/iframe--b9oChyi.js"></script>
   </head>
 
   <body>
