deploy: 0ebef8602f5750caf0ff7bbf083ca4d3b2bcf954

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-IqCxOwZT.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Da8YLY91.js"></script>
   </head>
 
   <body>
