deploy: cc64a7f62a4095be846f7814c6de09c4fb155f53

--- a/react/iframe.html
+++ b/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CrjSJuiH.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DOLJRp64.js"></script>
   </head>
 
   <body>
