deploy: fb656d7ea9c5ea3496f85bccd182f26e61513baa

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-D2yfhTd5.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BYye1HOP.js"></script>
   </head>
 
   <body>
