deploy: 026c483005dfb2a5cee8d15f75c87efbc147dc8f

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BYye1HOP.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DllVzMNY.js"></script>
   </head>
 
   <body>
