deploy: a712329e0fba6e81496d9f801cb1ad6d4de6b029

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DllVzMNY.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-pZOhveRN.js"></script>
   </head>
 
   <body>
