deploy: 36b78889aa0265d83c2568f67a7453c095cf701a

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-pZOhveRN.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-C9UVZSU9.js"></script>
   </head>
 
   <body>
