deploy: 660c72f0d728948063c6bf0512518dadadcf0a85

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DxR1pG02.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BeufU3Vg.js"></script>
   </head>
 
   <body>
