deploy: 3ed89da7ea16f495c9a6ba067e5db070eed628e5

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BupcVhXC.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CYRs-4QY.js"></script>
   </head>
 
   <body>
