deploy: ae4fd9db4345908196bb3e286313a0008b3b8aa4

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CYRs-4QY.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-By0oZVdp.js"></script>
   </head>
 
   <body>
