deploy: 20160ace530a2cd20a04bd624263eff6fc21ebf9

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DOVNCzA_.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Bqb3Y9aC.js"></script>
   </head>
 
   <body>
