deploy: 8990cf495c29fc6c1cfd75ac1cec2e119a8fb63c

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-a5WZCY0b.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BeQ0-8qn.js"></script>
   </head>
 
   <body>
