deploy: 80ea0cf0c990744c0140533d3b7618b86edac75e

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BeQ0-8qn.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CPZWgzF7.js"></script>
   </head>
 
   <body>
